@@ -1,41 +1,42 @@
 package com.github.alexmodguy.retrodamageindicators;
 
-import net.neoforged.neoforge.common.ModConfigSpec;
+import net.minecraftforge.common.ForgeConfigSpec;
 import org.apache.commons.lang3.tuple.Pair;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class Config {
-    public static final ModConfigSpec SPEC;
+    public static final ForgeConfigSpec SPEC;
     public static final Config INSTANCE;
 
     static {
-        final Pair<Config, ModConfigSpec> clientPair = new ModConfigSpec.Builder().configure(Config::new);
+        final Pair<Config, ForgeConfigSpec> clientPair = new ForgeConfigSpec.Builder().configure(Config::new);
         SPEC = clientPair.getRight();
         INSTANCE = clientPair.getLeft();
     }
 
-    public final ModConfigSpec.BooleanValue damageParticlesEnabled;
-    public final ModConfigSpec.DoubleValue damageParticleSize;
-    public final ModConfigSpec.BooleanValue damageParticleOutline;
-    public final ModConfigSpec.BooleanValue hudIndicatorEnabled;
-    public final ModConfigSpec.DoubleValue maxDistance;
-    public final ModConfigSpec.BooleanValue colorblindHealthBar;
-    public final ModConfigSpec.BooleanValue healthDecimals;
-    public final ModConfigSpec.BooleanValue healthSeperator;
-    public final ModConfigSpec.IntValue hudLingerTime;
-    public final ModConfigSpec.DoubleValue hudIndicatorSize;
-    public final ModConfigSpec.DoubleValue hudIndicatorBackgroundOpacity;
-    public final ModConfigSpec.BooleanValue hudIndicatorAlignLeft;
-    public final ModConfigSpec.BooleanValue hudIndicatorAlignTop;
-    public final ModConfigSpec.IntValue hudIndicatorPositionX;
-    public final ModConfigSpec.IntValue hudIndicatorPositionY;
-    public final ModConfigSpec.DoubleValue hudEntitySize;
-    public final ModConfigSpec.BooleanValue hudNameTextOutline;
-    public final ModConfigSpec.BooleanValue hudHealthTextOutline;
-    public final ModConfigSpec.ConfigValue<List<? extends String>> oldRenderEntities;
+    public final ForgeConfigSpec.BooleanValue damageParticlesEnabled;
+    public final ForgeConfigSpec.DoubleValue damageParticleSize;
+    public final ForgeConfigSpec.BooleanValue damageParticleOutline;
+    public final ForgeConfigSpec.BooleanValue hudIndicatorEnabled;
+    public final ForgeConfigSpec.DoubleValue maxDistance;
+    public final ForgeConfigSpec.BooleanValue colorblindHealthBar;
+    public final ForgeConfigSpec.BooleanValue healthDecimals;
+    public final ForgeConfigSpec.BooleanValue healthSeperator;
+    public final ForgeConfigSpec.IntValue hudLingerTime;
+    public final ForgeConfigSpec.DoubleValue hudIndicatorSize;
+    public final ForgeConfigSpec.DoubleValue hudIndicatorBackgroundOpacity;
+    public final ForgeConfigSpec.BooleanValue hudIndicatorAlignLeft;
+    public final ForgeConfigSpec.BooleanValue hudIndicatorAlignTop;
+    public final ForgeConfigSpec.IntValue hudIndicatorPositionX;
+    public final ForgeConfigSpec.IntValue hudIndicatorPositionY;
+    public final ForgeConfigSpec.DoubleValue hudEntitySize;
+    public final ForgeConfigSpec.BooleanValue hudNameTextOutline;
+    public final ForgeConfigSpec.BooleanValue hudHealthTextOutline;
+    public final ForgeConfigSpec.ConfigValue<List<? extends String>> oldRenderEntities;
 
-    public Config(final ModConfigSpec.Builder builder) {
+    public Config(final ForgeConfigSpec.Builder builder) {
         builder.push("damage-particles");
         damageParticlesEnabled = builder.comment("Whether the pop-up particles when a mob is injured or healed are enabled.").translation("damage_particles_enabled").define("damage_particles_enabled", true);
         damageParticleSize = builder.comment("The relative size of damage particles.").translation("damage_particle_size").defineInRange("damage_particle_size", 1.0D, 0.1D, 10.0D);
@@ -57,7 +58,7 @@ public class Config {
         hudEntitySize = builder.comment("The size in pixels a usual entity should render as in the hud indicator.").translation("hud_entity_size").defineInRange("hud_entity_size", 38.0D, 0.0D, 2000.0D);
         hudNameTextOutline = builder.comment("Whether the name of the entity in the hud indicator should be outlined.").translation("hud_name_text_outline").define("hud_name_text_outline", false);
         hudHealthTextOutline = builder.comment("Whether the health of the entity in the hud indicator should be outlined.").translation("hud_health_text_outline").define("hud_health_text_outline", false);
-        oldRenderEntities = builder.comment("List of all entity_types to just render as a model instead of with entity context. add to this if an entity is rendering strangely.").defineList("hud_old_render_entities", List.of("alexsmobs:giant_squid"), o -> o instanceof String);
+        oldRenderEntities = builder.comment("List of all entity_types to just render as a model instead of with entity context. add to this if an entity is rendering strangely.").defineList("hud_old_render_entities", Arrays.asList("alexsmobs:giant_squid"), o -> o instanceof String);
         builder.pop();
 
     }
